--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -2,61 +2,16 @@
 # clear_all_shortcuts yes
 
 
-font_family      Berkeley Mono Regular
-italic_font      Berkeley Mono Oblique
-bold_italic_font Berkeley Mono Bold Oblique
-bold_font        Berkeley Mono Bold
+font_family      Berkeley Mono SemiCondensed
+italic_font      Berkeley Mono SemiCondensed Oblique
+bold_italic_font Berkeley Mono Bold SemiCondensed Oblique
+bold_font        Berkeley Mono Bold SemiCondensed
 
 font_size 16.0
 modify_font cell_height 140%
-# font_features MonoLisa-Regular +zero +ss07 +ss08 +ss09
-# font_features MonoLisa-Italic +zero +ss02 +ss07 +ss08 +ss09
-# "Nerd Fonts - Pomicons"
-symbol_map  U+E000-U+E00D Symbols Nerd Font
+# Nerd Fonts v3.3.0
 
-# "Nerd Fonts - Powerline"
-symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
-
-# "Nerd Fonts - Powerline Extra"
-symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
-
-# "Nerd Fonts - Symbols original"
-symbol_map U+e5fa-U+e6ac Symbols Nerd Font
-
-# "Nerd Fonts - Devicons"
-symbol_map U+e700-U+e7c5 Symbols Nerd Font
-
-# "Nerd Fonts - Font awesome"
-symbol_map U+f000-U+f2e0 Symbols Nerd Font
-
-# "Nerd Fonts - Font awesome extension"
-symbol_map U+e200-U+e2a9 Symbols Nerd Font
-
-# "Nerd Fonts - Octicons"
-symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
-
-# "Nerd Fonts - Font Linux"
-symbol_map U+F300-U+F313 Symbols Nerd Font
-
-#  Nerd Fonts - Font Power Symbols"
-symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
-
-#  "Nerd Fonts - Material Design Icons"
-# symbol_map U+f500-U+fd46 Symbols Nerd Font
-symbol_map U+F0001-U+F1AF0 Symbols Nerd Font
-
-# "Nerd Fonts - Weather Icons"
-symbol_map U+e300-U+e3eb Symbols Nerd Font
-
-# Misc Code Point Fixes
-symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
-
-
-# Some symbols not covered by Symbols Nerd Font
-# nonicons contains icons in the range: U+F101-U+F27D
-# U+F167 is HTML logo, but YouTube logo in Symbols Nerd Font
-symbol_map U+F102,U+F116-U+F118,U+F12F,U+F13E,U+F1AF,U+F1BF,U+F1CF,U+F1FF,U+F20F,U+F21F-U+F220,U+F22E-U+F22F,U+F23F,U+F24F,U+F25F nonicons
-
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 disable_ligatures cursor
 
 cursor_shape block
